--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ streamlit
 openfoodfacts
 zxing-cpp
 Pillow
+streamlit-webrtc
 # streamlit-barcode-scanner @ git+https://github.com/FloWide/streamlit-barcode-scanner.git
