--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ streamlit
 openfoodfacts
 zxing-cpp
 Pillow
-streamlit-webrtc
+# streamlit-webrtc # Too slow
 # streamlit-barcode-scanner @ git+https://github.com/FloWide/streamlit-barcode-scanner.git
