get off categories

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ streamlit
 openfoodfacts
 zxing-cpp
 Pillow
+requests
 # streamlit-webrtc # Too slow
 # streamlit-barcode-scanner @ git+https://github.com/FloWide/streamlit-barcode-scanner.git
